[gd_scene load_steps=7 format=1]

[ext_resource path="res://assets/gui/GUI.gd" type="Script" id=1]
[ext_resource path="res://assets/art/texture/gui/journal-bg.tex" type="Texture" id=2]
[ext_resource path="res://assets/art/texture/gui/crosshair.tex" type="Texture" id=3]
[ext_resource path="res://assets/menu/ingamemenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/menu/helpmenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/menu/settingsmenu.tscn" type="PackedScene" id=6]

[node name="GUI" type="Control"]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 601.0
script/script = ExtResource( 1 )

[node name="Journal" type="TextureFrame" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 879.0
margin/top = 298.0
margin/right = 1012.0
margin/bottom = 495.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 0

[node name="Text" type="RichTextLabel" parent="Journal"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 23.0
margin/top = 39.0
margin/right = 116.0
margin/bottom = 173.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = true
bbcode/bbcode = ""
visible_characters = -1
percent_visible = 1.0

[node name="CenterContainerMiddle" type="CenterContainer" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 308.0
margin/right = 1027.0
margin/bottom = 342.0
use_top_left = false

[node name="Notification" type="Label" parent="CenterContainerMiddle"]

rect/min_size = Vector2( 300, 30 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 363.0
margin/top = 2.0
margin/right = 663.0
margin/bottom = 32.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Timer" type="Timer" parent="CenterContainerMiddle/Notification"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="CenterContainerFull" type="CenterContainer" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 598.0
use_top_left = false

[node name="Crosshair" type="TextureFrame" parent="CenterContainerFull"]

visibility/self_opacity = 0.7
rect/min_size = Vector2( 16, 16 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 504.0
margin/top = 291.0
margin/right = 520.0
margin/bottom = 307.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 0

[node name="IngameMenu" parent="." instance=ExtResource( 4 )]

[node name="HelpMenu" parent="." instance=ExtResource( 5 )]

[node name="Settings" parent="." instance=ExtResource( 6 )]


